fix bg and points

--- a/style.css
+++ b/style.css
@@ -4,10 +4,14 @@
 	line-height: 110%;
 	outline: none;
 }
+html {
+	background-color: #ffffff;
+}
 
 body{
 	font-family: 'Open Sans', Arial,sans-serif;
 	color: #000000;
+	background-color: #ffffff;
 }
 
 .icon {
@@ -221,7 +225,7 @@ svg use{
 .c-status--is-completed:before {width:auto; right: -2px; border-radius: 8px; background-color: #0067b1;}
 
 
-/* B */
+/* c-advertising-zone  */
 .c-advertising-zone {
 	position:fixed;
 	left: 48px;
@@ -243,10 +247,13 @@ svg use{
 }
 
 /* B */
+.b-buffer {
+	height:100%;
+}
+
 .b {
 	position: relative;
-	top: 100%;
-	margin-top: 8px;
+	top: 8px;
 	z-index: 10;
 	display: inline-block;
 	height: 40px;
